Improved Features Description

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">Application Developments</h3>
-              <p>With over 25 years of experience, I help businesses solve complex problems and achieve their goals by developing and deploying efficient, reliable, scalable, and maintainable software applications.</p>
+              <p>Data-driven decision-making efficient apps through AI enhanced databases
+                with easy-to-use web interfaces delivered on time and within budget.
+              </p>
             </div>
           </div>
         </div>
@@ -54,7 +56,9 @@
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">AI Transformations</h3>
-              <p>How to leverage AI tools in your company through best opportunity analysis and pilot projects developments</p>
+              <p>Strategic opportunity analysis and pilot projects developments to identify
+                impactful AI solutions to enhance products, services, and internal processes.
+              </p>
             </div>
           </div>
         </div>
@@ -64,8 +68,10 @@
               <img src="./Symbols/ITD2-MarketExpansion_v1.png" alt="Market Expansion" style="width: 100%;">
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">Go to Market</h3>
-              <p>Business development and Market expansion services for small and medium-sized technology companies in international markets (France - UK - Brazil).</p>
+              <h3 class="fs-2 text-body-emphasis">Business Expansion</h3>
+              <p>Drive successful business development and market entry/expansion for startups,
+                both domestically and internationally (France, UK, Brazil, etc.).
+              </p>
             </div>
           </div>
         </div>
