Including 25 years of experience

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <span class="fs-4">Internet Technologies Developments</span>
         </a>
 
+
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Developments</a></li>
@@ -29,6 +30,9 @@
           <li class="nav-item"><a href="#" class="nav-link">About ITD2</a></li>
         </ul>
       </header>
+        <div class="service-experience">
+          <p class="text-start link-body-emphasis">Over 25 years of experience in the following areas:</p>
+      </div>
     </div>
   </section>
 
