--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <img src="./Symbols/AI-DigitalTransformation_Variant_1280x720_v2.png" alt="strategic transformations" style="width: 100%;">
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">AI Transformations</h3>
+              <h3 class="fs-2 text-body-emphasis">AI Digital Transformations</h3>
               <p>Strategic opportunity analysis and pilot projects developments to identify
                 impactful AI solutions to enhance products, services, and internal processes.
               </p>
