--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- ITD2 Header -->
   <section id="itd2-header">
     <div class="container">
-      <header class="d-flex flex-wrap justify-content-center py-3 mb-0 border-bottom">
+      <header class="d-flex flex-wrap justify-content-center py-3 mb-0 ">
         <img src="./Logos/internet-technology-developments-favicon-white.png" alt="itd2 favicon">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
 
