--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
       <header class="d-flex flex-wrap justify-content-center py-3 mb-0 ">
         <img src="./Logos/internet-technology-developments-favicon-white.png" alt="itd2 favicon">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-
           <span class="fs-4">Internet Technologies Developments</span>
         </a>
-
-
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Developments</a></li>
@@ -30,8 +27,8 @@
           <li class="nav-item"><a href="#" class="nav-link">About ITD2</a></li>
         </ul>
       </header>
-        <div class="service-experience">
-          <p class="text-start link-body-emphasis ">Over 25 years of experience in the following areas:</p>
+      <div class="service-experience">
+        <p class="text-start link-body-emphasis ">Over 25 years of experience in the following areas:</p>
       </div>
     </div>
   </section>
@@ -47,22 +44,20 @@
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">Application Developments</h3>
-              <p>Data-driven decision-making efficient apps through AI enhanced databases
-                with easy-to-use web interfaces delivered on time and within budget.
-              </p>
+              <p>Data-driven decision-making efficient apps through AI enhanced databases with easy-to-use web interfaces delivered on time and within budget.</p>
+              <a href="application-development.html" class="btn btn-primary mt-1">More...</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="d-flex flex-column align-items-center justify-content-center">
             <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
-              <img src="./Symbols/AI-DigitalTransformation_Variant_1280x720_v2.png" alt="strategic transformations" style="width: 100%;">
+              <img src="./Symbols/ITD2-DigitalTransformation_Variant_1280x720_v2.png" alt="strategic transformations" style="width: 100%;">
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">AI-Digital Transformations</h3>
-              <p>Strategic opportunity analysis and pilot projects developments to identify
-                impactful AI solutions to enhance products, services, and internal processes.
-              </p>
+              <p>Strategic opportunity analysis and pilot projects developments to identify impactful AI solutions to enhance products, services, and internal processes.</p>
+              <a href="digital-transformations.html" class="btn btn-primary mt-1">More...</a>
             </div>
           </div>
         </div>
@@ -73,9 +68,8 @@
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">Business Expansion</h3>
-              <p>Drive successful business development and market entry/expansion for startups,
-                both domestically and internationally (France, UK, Brazil, etc.).
-              </p>
+              <p>Drive successful business development and market entry/expansion for startups, both domestically and internationally (France, UK, Brazil, etc.).</p>
+              <a href="business-expansion.html" class="btn btn-primary mt-1">More...</a>
             </div>
           </div>
         </div>
