Consolidate local changes: updated HTML files, added new images, and modified styles

--- a/index.html
+++ b/index.html
@@ -1,84 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ITD2</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ITD2</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body class="gradient-background">
-
-  <!-- ITD2 Header -->
-  <section id="itd2-header">
-    <div class="container">
-      <header class="d-flex flex-wrap justify-content-center py-3 mb-0 ">
-        <img src="./Logos/internet-technology-developments-favicon-white.png" alt="itd2 favicon">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <span class="fs-4">Internet Technologies Developments</span>
-        </a>
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Developments</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Transformations</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Expansions</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About ITD2</a></li>
-        </ul>
-      </header>
-      <div class="service-experience">
-        <p class="text-start link-body-emphasis ">Over 25 years of experience in the following areas:</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- ITD2 Features -->
-  <section id="features">
-    <div class="container px-4">
-      <div class="row g-4 py-5">
-        <div class="col-lg-4">
-          <div class="d-flex flex-column align-items-center justify-content-center">
-            <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
-              <img src="./Symbols/ITD2-SoftwareDevelopment_v1.png" alt="software development" style="width: 100%;">
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Application Developments</h3>
-              <p>Data-driven decision-making efficient apps through AI enhanced databases with easy-to-use web interfaces delivered on time and within budget.</p>
-              <a href="application-development.html" class="btn btn-primary mt-1">More...</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="d-flex flex-column align-items-center justify-content-center">
-            <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
-              <img src="./Symbols/ITD2-DigitalTransformation_Variant_1280x720_v2.png" alt="strategic transformations" style="width: 100%;">
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">AI-Digital Transformations</h3>
-              <p>Strategic opportunity analysis and pilot projects developments to identify impactful AI solutions to enhance products, services, and internal processes.</p>
-              <a href="digital-transformations.html" class="btn btn-primary mt-1">More...</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="d-flex flex-column align-items-center justify-content-center">
-            <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
-              <img src="./Symbols/ITD2-MarketExpansion_v1.png" alt="Market Expansion" style="width: 100%;">
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Business Expansion</h3>
-              <p>Drive successful business development and market entry/expansion for startups, both domestically and internationally (France, UK, Brazil, etc.).</p>
-              <a href="business-expansion.html" class="btn btn-primary mt-1">More...</a>
-            </div>
-          </div>
+  <body class="gradient-background">
+    <!-- ITD2 Header -->
+    <section id="itd2-header">
+      <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-0">
+          <img
+            src="./Logos/internet-technology-developments-favicon-white.png"
+            alt="itd2 favicon"
+          />
+          <a
+            href="/"
+            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+          >
+            <span class="fs-4">Internet Technologies Developments</span>
+          </a>
+          <!-- Navigation Bar -->
+          <ul class="nav nav-pills me-3">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="application-development.html" class="nav-link"
+                >Developments</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="digital-transformations.html" class="nav-link"
+                >Transformations</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="business-expansion.html" class="nav-link">Expansions</a>
+            </li>
+            <li class="nav-item">
+              <a href="about-mybio.html" class="nav-link">About Me</a>
+            </li>
+          </ul>
+        </header>
+        <div class="service-experience">
+          <p class="text-start link-body-emphasis">
+            Over 25 years of experience in the following areas:
+          </p>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- ITD2 Features -->
+    <section id="features">
+      <div class="container px-4">
+        <div class="row g-4 py-5">
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-SoftwareDevelopment_v1.png"
+                  alt="software development"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">
+                  Application Developments
+                </h3>
+                <p>
+                  Data-driven decision-making efficient apps through AI enhanced
+                  databases with easy-to-use web interfaces delivered on time
+                  and within budget.
+                  <a
+                    href="application-development.html"
+                    class="link-body-emphasis more-link"
+                    >More...</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-DigitalTransformation_Variant_1280x720_v2.png"
+                  alt="strategic transformations"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">
+                  AI-Digital Transformations
+                </h3>
+                <p>
+                  Strategic opportunity analysis and pilot projects developments
+                  to identify impactful AI solutions to enhance products,
+                  services, and internal processes.
+                  <a
+                    href="digital-transformations.html"
+                    class="link-body-emphasis more-link"
+                    >More...</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-MarketExpansion_v1.png"
+                  alt="Market Expansion"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Business Expansion</h3>
+                <p>
+                  Drive successful business development and market
+                  entry/expansion for startups, both domestically and
+                  internationally (France, UK, Brazil, etc.).
+                  <a
+                    href="business-expansion.html"
+                    class="link-body-emphasis more-link"
+                    >More...</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
