--- a/application-development.html
+++ b/application-development.html
@@ -1,83 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ITD2 - Application Development</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ITD2 - Application Development</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
+  <body class="gradient-background gradiant-color-app-dev">
+    <header class="d-flex justify-content-between align-items-center py-3">
+      <img
+        src="./Logos/internet-technology-developments-favicon-white.png"
+        alt="itd2 favicon"
+      />
+      <a
+        href="index.html"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
+      >
+        <span class="fs-4">ITD2/Application Developments</span>
+      </a>
+      <!-- Navigation Bar -->
+      <ul class="nav nav-pills me-3">
+        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+        <li class="nav-item">
+          <a href="application-development.html" class="nav-link"
+            >Developments</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="digital-transformations.html" class="nav-link"
+            >Transformations</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="business-expansion.html" class="nav-link">Expansions</a>
+        </li>
+        <li class="nav-item">
+          <a href="about-mybio.html" class="nav-link">About Me</a>
+        </li>
+      </ul>
+    </header>
 
-<body class="gradient-background">
-
-  <header class="d-flex justify-content-between align-items-center py-3 mb-3 border-bottom">
-    <img src="./Logos/internet-technology-developments-favicon-white.png" alt="itd2 favicon">
-    <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <span class="fs-4">Internet Technologies Developments</span>
-    </a>
-    <a href="index.html" class="btn btn-primary">Back</a>
-  </header>
-
-  <section id="application-development-features">
-    <div class="container px-4">
-      <div class="row g-4 py-5">
-        <div class="col-lg-4">
-          <div class="d-flex flex-column align-items-center justify-content-center">
-            <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
-              <img src="./Symbols/ITD2-ApplicationDevelopment_Programming_1280x720_v2.png" alt="programming" style="width: 100%;">
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Programming</h3>
-              <ul>
-                <li><strong>OOD:</strong> For modular, maintainable, and scalable applications.</li>
-                <li><strong>Python:</strong> For back-end development, data analysis tools, and machine learning models.</li>
-                <li><strong>JavaScript:</strong> For Dynamic and interactive front-end experiences, SPAs, and web applications</li>
-                <li><strong>React:</strong> To leverage component-based architecture for efficient code reusability and faster development.</li>
-                <li><strong>Front-End:</strong> HTML, CSS, Grid, Flexbox & Bootstrap for visually appealing and user-friendly interfaces with responsive design across various devices.</li>
-              </ul>
+    <section id="application-development-features">
+      <div class="container px-4">
+        <div class="row g-4 py-5">
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-ApplicationDevelopment_Programming_Icon_v2.png"
+                  alt="programming"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Programming</h3>
+                <ul>
+                  <li>
+                    <strong>OOD:</strong> For modular, maintainable, and
+                    scalable applications.
+                  </li>
+                  <li>
+                    <strong>Python:</strong> For back-end development, data
+                    analysis tools, and machine learning models.
+                  </li>
+                  <li>
+                    <strong>JavaScript:</strong> For Dynamic and interactive
+                    front-end experiences, SPAs, and web applications
+                  </li>
+                  <li>
+                    <strong>React:</strong> To leverage component-based
+                    architecture for efficient code reusability and faster
+                    development.
+                  </li>
+                  <li>
+                    <strong>Front-End:</strong> HTML, CSS, Grid, Flexbox &
+                    Bootstrap for visually appealing and user-friendly
+                    interfaces with responsive design across various devices.
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="d-flex flex-column align-items-center justify-content-center">
-            <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
-              <img src="./Symbols/ITD2-ApplicationDevelopment_Technologies_1280x720_v2.png" alt="technologies" style="width: 100%;">
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Technologies</h3>
-              <ul>
-                <li><strong>AI Chatbots (Data-Driven):</strong> With Python API interfaces to extract insights from large language models, enabling data-driven decision-making.</li>
-                <li><strong>Databases:</strong> SQL and Graph Relational (Neo4j): for managing interconnected data with complex relationships./li>
-                <li><strong>NLP:</strong> GATE, NLTK, spaCy, Scikit-learn: Popular libraries toolkits for text processing, tokenization, named entity recognition, sentiment analysis.</li>
-                <li><strong>WEB 3.0 (Semantic Web):</strong> RDF for structured data representation, SPARQL for efficient querying and Protégé for knowledge modeling.</li>
-               </ul>
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-ApplicationDevelopment_Technologies_Icon_v5.png"
+                  alt="technologies"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Technologies</h3>
+                <ul>
+                  <li>
+                    <strong>AI Chatbots (Data-Driven):</strong> With Python API
+                    interfaces to extract insights from large language models,
+                    enabling data-driven decision-making.
+                  </li>
+                  <li>
+                    <strong>Databases:</strong> SQL and Graph Relational
+                    (Neo4j): for managing interconnected data with complex
+                    relationships./li>
+                  </li>
+                  <li>
+                    <strong>NLP:</strong> GATE, NLTK, spaCy, Scikit-learn:
+                    Popular libraries toolkits for text processing,
+                    tokenization, named entity recognition, sentiment analysis.
+                  </li>
+                  <li>
+                    <strong>WEB 3.0 (Semantic Web):</strong> RDF for structured
+                    data representation, SPARQL for efficient querying and
+                    Protégé for knowledge modeling.
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="d-flex flex-column align-items-center justify-content-center">
-            <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
-              <img src="./Symbols/ITD2-ApplicationDevelopments_DevOps_1280x720_v2.png" alt="best practices" style="width: 100%;">
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Best Practices</h3>
-              <ul>
-                <li><strong>IDE's:</strong> Intellij Idea, Pycharm, Visual Studio Code: Development efficiency, refactoring, debugging, ...</li>
-                <li><strong>Version Control:</strong> Git and GitHub for efficient version control and collaboration, code tracking, ...</li>
-                <li><strong>Automatic Testing:</strong> unittest, pytest to ensure code quality and functionality throughout the development process.</li>
-                <li><strong>CI/CD:</strong> GitHub Actions for streamlined development, testing, and deployment of applications.</li>
-                <li><strong>Agile Methodology:</strong> to foster iterative development, close collaboration with clients, and continuous improvement.</li>
-              </ul>
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-ApplicationDevelopments_DevOps_Icons_v2.png"
+                  alt="best practices"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Best Practices</h3>
+                <ul>
+                  <li>
+                    <strong>IDE's:</strong> Intellij Idea, Pycharm, Visual
+                    Studio Code: Development efficiency, refactoring, debugging,
+                    ...
+                  </li>
+                  <li>
+                    <strong>Version Control:</strong> Git and GitHub for
+                    efficient version control and collaboration, code tracking,
+                    ...
+                  </li>
+                  <li>
+                    <strong>Automatic Testing:</strong> unittest, pytest to
+                    ensure code quality and functionality throughout the
+                    development process.
+                  </li>
+                  <li>
+                    <strong>CI/CD:</strong> GitHub Actions for streamlined
+                    development, testing, and deployment of applications.
+                  </li>
+                  <li>
+                    <strong>Agile Methodology:</strong> to foster iterative
+                    development, close collaboration with clients, and
+                    continuous improvement.
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
