--- a/business-expansion.html
+++ b/business-expansion.html
@@ -1,51 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ITD2 - Business Expansion</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body class="gradient-background gradiant-color-business-expansion">
+    <!-- Header Section with Navigation Bar -->
+    <header
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-4"
+    >
+      <img
+        src="./Logos/internet-technology-developments-favicon-white.png"
+        alt="itd2 favicon"
+        class="ms-3"
+      />
+      <a
+        href="index.html"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
+      >
+        <span class="fs-4">ITD2/Business Expansion</span>
+      </a>
+      <!-- Navigation Bar -->
+      <ul class="nav nav-pills me-3">
+        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+        <li class="nav-item">
+          <a href="application-development.html" class="nav-link"
+            >Developments</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="digital-transformations.html" class="nav-link"
+            >Transformations</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            href="business-expansion.html"
+            class="nav-link active"
+            aria-current="page"
+            >Expansions</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="about-mybio.html" class="nav-link">About Me</a>
+        </li>
+      </ul>
+    </header>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ITD2 - Application Development</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
+    <!-- Business Expansion Features Section -->
+    <section id="business-expansion-features">
+      <div class="container px-4">
+        <div class="row g-4 py-5">
+          <!-- Opportunity Assessment Column -->
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-MarketExpansion_OpportunityAssessment_Icon_v1.png"
+                  alt="Opportunity Assessment"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Opportunity Assessment</h3>
+                <ul>
+                  <li>
+                    <strong>Market Exploration Executive Workshops:</strong> To
+                    identify high-growth markets aligning with the company's
+                    offerings and expansion aspirations.
+                  </li>
+                  <li>
+                    <strong>Data-Driven Market Insights:</strong>
+                    Collaboratively analyze market and industry trends to
+                    identify a shortlist of opportunities.
+                  </li>
+                  <li>
+                    <strong>Competitive Landscape Assessment:</strong> Evaluate
+                    existing competition across the shortlisted target markets
+                    and assess potential challenges for differentiation.
+                  </li>
+                  <li>
+                    <strong>Market Entry Strategy Roadmap:</strong> Outlining
+                    priority target markets, customer segments, and potential
+                    market entry approaches.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
 
-<body class="gradient-background">
+          <!-- Expansion Plan Column -->
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-MarketExpansion_Expansion_Strategy-Plan_Icon_v3.png"
+                  alt="Expansion Plan"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Expansion Plan</h3>
+                <ul>
+                  <li>
+                    <strong>Market-Specific Marketing & Sales Strategy:</strong>
+                    Tailored to selected potential markets.
+                  </li>
+                  <li>
+                    <strong>Pricing Strategy for Market Fit:</strong>
+                    Competitive and sustainable pricing strategies aligned with
+                    the target market's expectations and local conditions.
+                  </li>
+                  <li>
+                    <strong>Localized Go-to-Market Toolkit:</strong> Localized
+                    messaging, branding materials, and product adaptations to
+                    cultural nuances of target markets.
+                  </li>
+                  <li>
+                    <strong>Channel Partner Identification:</strong> Identify
+                    strategic potential distributors, resellers, or system
+                    integrators.
+                  </li>
+                  <li>
+                    <strong>Actionable Market Entry Plan:</strong> Outlining
+                    your go-to-market strategy, partnership plan, localized
+                    toolkit, and pricing strategy.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
 
-  <header class="d-flex justify-content-between align-items-center py-3 mb-3 border-bottom">
-    <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <span class="fs-4">Internet Technologies Developments</span>
-    </a>
-    <a href="#" class="btn btn-primary">Back</a>
-  </header>
-
-  <section id="application-development">
-    <div class="container px-4">
-      <div class="row g-4 py-5">
-        <div class="col-lg-6">
-          <img src="./Images/ApplicationDevelopment_HeroImage.jpg" alt="Application Development Hero Image" class="img-fluid rounded">
-        </div>
-        <div class="col-lg-6">
-          <h1 class="fs-1">Application Development</h1>
-          <p>
-            At ITD2, we specialize in building data-driven applications that empower businesses to make informed decisions.
-            We leverage cutting-edge technologies like AI and machine learning to create efficient and user-friendly web applications
-            that cater to your specific needs. From concept to deployment, our team of experienced developers ensures your applications
-            are delivered on time and within budget.
-          </p>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Custom software development</li>
-            <li class="list-group-item">Web application development</li>
-            <li class="list-group-item">Mobile application development</li>
-            <li class="list-group-item">API integration and development</li>
-            <li class="list-group-item">Cloud-based application development</li>
-          </ul>
+          <!-- Market Entry Column -->
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-MarketExpansion_MarketEntry_Icon_v2.png"
+                  alt="Market Entry"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Market Entry</h3>
+                <ul>
+                  <li>
+                    <strong>Partnership Acquisition & Onboarding:</strong>
+                    Targeted outreach, collaboration proposal, and contract
+                    negotiations.
+                  </li>
+                  <li>
+                    <strong
+                      >Localized Market Launch & Pilot Customer
+                      Acquisition:</strong
+                    >
+                    Localized marketing campaigns, sales activities to launch a
+                    customer base.
+                  </li>
+                  <li>
+                    <strong>Performance Monitoring & Optimization:</strong> KPIs
+                    to track campaign effectiveness, customer acquisition
+                    progress, and sales results.
+                  </li>
+                  <li>
+                    <strong>Market Entry Report & Recommendations:</strong>
+                    Summarizing partnership acquisitions, sales results, key
+                    learnings, and actionable recommendations for future market
+                    expansion efforts.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+    </section>
+
+    <!-- Home Button -->
+    <div class="container text-center mb-5">
+      <a href="index.html" class="btn btn-secondary">Home</a>
     </div>
-  </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-</body>
-
+    <!-- JavaScript for Bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
