--- a/digital-transformations.html
+++ b/digital-transformations.html
@@ -1,51 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ITD2 - Digital Transformations</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body class="gradient-background gradiant-color-digital-transformations">
+    <!-- Header Section with Navigation Bar -->
+    <header
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-4"
+    >
+      <img
+        src="./Logos/internet-technology-developments-favicon-white.png"
+        alt="itd2 favicon"
+        class="ms-3"
+      />
+      <a
+        href="index.html"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
+      >
+        <span class="fs-4">ITD2/Digital Transformations</span>
+      </a>
+      <!-- Navigation Bar -->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ITD2 - Application Development</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
+      <ul class="nav nav-pills me-3">
+        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+        <li class="nav-item">
+          <a href="application-development.html" class="nav-link"
+            >Developments</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="digital-transformations.html" class="nav-link"
+            >Transformations</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="business-expansion.html" class="nav-link">Expansions</a>
+        </li>
+        <li class="nav-item">
+          <a href="about-mybio.html" class="nav-link">About Me</a>
+        </li>
+      </ul>
+    </header>
 
-<body class="gradient-background">
+    <!-- Digital Transformation Features Section -->
+    <section id="digital-transformation-features">
+      <div class="container px-4">
+        <div class="row g-4 py-5">
+          <!-- Opportunity Analysis Column -->
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-DigitalTransformations_OpportunityAnalysis_Icon_v3.png"
+                  alt="Opportunity Analysis"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Opportunity Analysis</h3>
+                <ul>
+                  <li>
+                    <strong>Executive Alignment Workshops:</strong> Work
+                    directly with the executive team to identify key business
+                    challenges and aspirations.
+                  </li>
+                  <li>
+                    <strong>Data-Driven Insights Discovery:</strong>
+                    Collaboratively explore company’s existing data landscape to
+                    uncover hidden opportunities for AI-powered solutions.
+                  </li>
+                  <li>
+                    <strong>Competitive Benchmarking & Differentiation:</strong>
+                    Analyze how industry leaders are leveraging AI, and identify
+                    areas where the company can gain a competitive edge through
+                    innovative applications.
+                  </li>
+                  <li>
+                    <strong>AI Opportunity Roadmap:</strong> Generate a
+                    prioritized roadmap outlining the most promising AI-powered
+                    solutions to address the identified challenges and unlock
+                    significant business value.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
 
-  <header class="d-flex justify-content-between align-items-center py-3 mb-3 border-bottom">
-    <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <span class="fs-4">ITD2 => Digital Transformations</span>
-    </a>
-    <a href="#" class="btn btn-primary">Back</a>
-  </header>
+          <!-- AI-Digital Strategy Column -->
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-DigitalTransformations_Strategy_Icon_v2.png"
+                  alt="AI-Digital Strategy"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">AI-Digital Strategy</h3>
+                <ul>
+                  <li>
+                    <strong>Phased AI Strategy:</strong> AI-Digital strategy
+                    roadmap focusing on prioritized initiatives aligned with
+                    business goals and technological feasibility in a step-wise
+                    approach.
+                  </li>
+                  <li>
+                    <strong>Scalable Solution Architecture:</strong> Modular AI
+                    scalable solution architecture integrated with existing
+                    company IT infrastructure and data ecosystem.
+                  </li>
+                  <li>
+                    <strong>Pilot-Driven Phased Implementation Plan:</strong>
+                    Pilot projects to validate selected AI solutions.
+                  </li>
+                  <li>
+                    <strong>Change Management:</strong> Tailored approach to
+                    ensure employee buy-in and foster a culture of innovation
+                    throughout the organization.
+                  </li>
+                  <li>
+                    <strong>Actionable AI Transformation Plan:</strong>
+                    Comprehensive and actionable AI transformation plan,
+                    including a prioritized roadmap, scalable architecture, and
+                    pilot project plan.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
 
-  <section id="application-development">
-    <div class="container px-4">
-      <div class="row g-4 py-5">
-        <div class="col-lg-6">
-          <img src="./Images/ApplicationDevelopment_HeroImage.jpg" alt="Application Development Hero Image" class="img-fluid rounded">
-        </div>
-        <div class="col-lg-6">
-          <h1 class="fs-1">Application Development</h1>
-          <p>
-            At ITD2, we specialize in building data-driven applications that empower businesses to make informed decisions.
-            We leverage cutting-edge technologies like AI and machine learning to create efficient and user-friendly web applications
-            that cater to your specific needs. From concept to deployment, our team of experienced developers ensures your applications
-            are delivered on time and within budget.
-          </p>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Custom software development</li>
-            <li class="list-group-item">Web application development</li>
-            <li class="list-group-item">Mobile application development</li>
-            <li class="list-group-item">API integration and development</li>
-            <li class="list-group-item">Cloud-based application development</li>
-          </ul>
+          <!-- Pilot Projects Column -->
+          <div class="col-lg-4">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="text-body-emphasis fs-4 flex-shrink-0 mb-3">
+                <img
+                  src="./Symbols/ITD2-Symbol_DigitalTransformation_PilotProject_GrayScale-Icon_v8.png"
+                  alt="Pilot Projects"
+                  style="width: 100%"
+                />
+              </div>
+              <div>
+                <h3 class="fs-2 text-body-emphasis">Pilot Projects</h3>
+                <ul>
+                  <li>
+                    <strong>Focused AI Pilot Projects:</strong> Develop and
+                    deploy pilot applications aligned with the prioritized
+                    initiatives from the AI strategy plan.
+                  </li>
+                  <li>
+                    <strong>Agile Development & Iteration:</strong> To rapidly
+                    prototype, gather feedback from stakeholders, and
+                    iteratively refine the AI solutions.
+                  </li>
+                  <li>
+                    <strong>Data-Driven Performance Measurement:</strong>
+                    Establish clear and measurable key performance indicators
+                    (KPIs) tailored to the pilot project.
+                  </li>
+                  <li>
+                    <strong>Scalability & Integration Roadmap:</strong> With
+                    existing IT infrastructure and data ecosystem.
+                  </li>
+                  <li>
+                    <strong>Actionable Business Insights:</strong> Comprehensive
+                    report of the pilot project results, including validated
+                    feasibility, quantified ROI, and actionable insights for
+                    integrating the solution into your broader business
+                    operations.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+    </section>
+
+    <!-- Home Button -->
+    <div class="container text-center mb-5">
+      <a href="index.html" class="btn btn-secondary">Home</a>
     </div>
-  </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-</body>
-
+    <!-- JavaScript for Bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
