Changed About button label

--- a/application-development.html
+++ b/application-development.html
@@ -42,7 +42,7 @@
           <a href="business-expansion.html" class="nav-link">Expansions</a>
         </li>
         <li class="nav-item">
-          <a href="about-mybio.html" class="nav-link">About Me</a>
+          <a href="about-mybio.html" class="nav-link">About</a>
         </li>
       </ul>
     </header>
