--- a/business-expansion.html
+++ b/business-expansion.html
@@ -50,7 +50,7 @@
           >
         </li>
         <li class="nav-item">
-          <a href="about-mybio.html" class="nav-link">About Me</a>
+          <a href="about-mybio.html" class="nav-link">About</a>
         </li>
       </ul>
     </header>
