Added Contact Footer for each page

--- a/digital-transformations.html
+++ b/digital-transformations.html
@@ -192,10 +192,13 @@
       </div>
     </section>
 
-    <!-- Home Button -->
-    <div class="container text-center mb-5">
-      <a href="index.html" class="btn btn-secondary">Home</a>
-    </div>
+    <!-- Footer Section -->
+    <footer class="footer-content">
+      <p>
+        &copy; 2024 ITD2 - Contact Us:
+        <a href="mailto:contact@itd2.net">contact@itd2.net</a>
+      </p>
+    </footer>
 
     <!-- JavaScript for Bootstrap -->
     <script
