--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
         </div>
       </div>
     </section>
+    <!-- Footer Section -->
+    <footer class="footer-content">
+      <p>
+        &copy; 2024 ITD2 - Contact Us:
+        <a href="mailto:contact@itd2.net">contact@itd2.net</a>
+      </p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
