--- a/application-development.html
+++ b/application-development.html
@@ -174,6 +174,14 @@
       </div>
     </section>
 
+    <!-- Footer Section -->
+    <footer class="footer-content">
+      <p>
+        &copy; 2024 ITD2 - Contact Us:
+        <a href="mailto:contact@itd2.net">contact@itd2.net</a>
+      </p>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
